--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <meta name="apple-mobile-web-app-title" content="WWE 2K25" />
     
     <!-- Icons -->
-    <link rel="icon" type="image/png" sizes="32x32" href="https://image.pollinations.ai/prompt/WWE%202K25%20companion%20app%20icon%20logo%20symbol%20letter%20W%20red%20and%20black%20gradient%20glossy%20square%20vector%20art%20minimalist?width=32&height=32&nologo=true" />
-    <link rel="icon" type="image/png" sizes="16x16" href="https://image.pollinations.ai/prompt/WWE%202K25%20companion%20app%20icon%20logo%20symbol%20letter%20W%20red%20and%20black%20gradient%20glossy%20square%20vector%20art%20minimalist?width=16&height=16&nologo=true" />
-    <link rel="apple-touch-icon" href="https://image.pollinations.ai/prompt/WWE%202K25%20companion%20app%20icon%20logo%20symbol%20letter%20W%20red%20and%20black%20gradient%20glossy%20square%20vector%20art%20minimalist?width=180&height=180&nologo=true" />
+    <link rel="icon" type="image/png" sizes="32x32" href="https://image.api.playstation.com/vulcan/ap/rnd/202501/1623/068123d291265a61f85713615aa2f255077fbf164186908e.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="https://image.api.playstation.com/vulcan/ap/rnd/202501/1623/068123d291265a61f85713615aa2f255077fbf164186908e.png" />
+    <link rel="apple-touch-icon" href="https://image.api.playstation.com/vulcan/ap/rnd/202501/1623/068123d291265a61f85713615aa2f255077fbf164186908e.png" />
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
